--- a/main.html
+++ b/main.html
@@ -6,7 +6,34 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="app">
+	<div class="vid-container">
+		<video loop muted class="video" src="Sounds/beach.mp4"></video>
+	</div>
+	<div class="player-container">
+    <div class="time-select" id="time-select">
+      <button id="smaller-mins">2 Minutes</button>
+      <button id="medium-mins">5 Minutes</button>
+      <button id="long-mins">10 Minutes</button>
+    </div>
+
+	<button class="play">
+      <img src="https://img.icons8.com/ios-filled/50/play.png" alt="play" />
+    </button>
+
+    <div class="time-display">10:0</div>
+
+		 <div class="sound-picker">
+      <button data-sound="Sounds/rain.mp3" data-video="Sounds/rain.mp4">
+        <img src="https://img.icons8.com/ios-filled/50/rain--v1.png" alt="Rain" />
+      </button>
+      <button data-sound="Sounds/beach.mp3" data-video="Sounds/beach.mp4">
+        <img src="https://img.icons8.com/ios-filled/50/sun--v1.png" alt="Sun" />
+      </button>
+    </div>
+  </div>
+
+  <audio class="audio" src="Sounds/beach.mp3"></audio>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
