--- a/main.html
+++ b/main.html
@@ -1,18 +1,18 @@
 <body>
   <div class="app" id="app">
     <div class="vid-container">
-      <video autoplay loop muted>
-        <source src="Videos/beach.mp4" type="video/mp4" />
+      <video  loop muted>
+        <source src="./video/beach.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
 
     <div class="player-container">
       <audio id="meditation-audio">
-        <source src="Sounds/beach.mp3" type="audio/mp3" />
+        <source src="./sounds/beach.mp3" type="audio/mp3" />
         Your browser does not support the audio element.
       </audio>
-
+<!-- 00:00 -->
       <div class="time-display">10:0</div>
 
       <div class="time-select">
